# LLMOps-Cancer-Data-Summerizer-Chatbot-deploy-to-aws

./: .gitignore  Step 01.md  Step 02.md  package-lock.json
backend/: context.py  pyproject.toml  requirements.txt  resources.py  server.py
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/components/: bot.tsx
memory/: 229538fc-ccd1-4de7-a3a0-d00f79d12fde.json  2e66d0c9-ab27-4f6d-a6de-bc5b8e2b3740.json  35dd554f-d46e-4ec5-a5d8-be26725b3e2f.json  36d7971b-05c6-4ed9-b230-c60c566db273.json  565a17c5-093d-4a4f-b5ce-5cd5303e7636.json  ad782f42-15b9-445f-bb1e-0bf967880471.json  b71746cc-b462-4b4a-8d03-e3f1758282d2.json  cb42ce02-7c25-4eec-bf72-89653a2ea840.json  d50e0799-2b84-4484-adc2-f0eef42246f6.json
scripts/: deploy.sh
